--- a/DNAOrderApp/order/templates/order/phenotype-table-fmpage.html
+++ b/DNAOrderApp/order/templates/order/phenotype-table-fmpage.html
@@ -1,3 +1,4 @@
+<div id="phenotype-table-container{{ss.pk}}">
 <table class="table table-striped table-bordered table-hover" name="phenotype-table" value="{{ssid}}" id ="phenotype-table{{ssid}}" ss-name="{{ ss_name }}">
 	<tr>
 		<th> Phenotype Name </th>
@@ -18,5 +19,6 @@
 	</tr>
 	{% endfor %}
 </table>
+</div>
 
 
